force-app/main/default/objects/Gala_Guest__c/Gala_Guest__c.object-meta.xml
<CustomObject>
    <description>One guest / seat at the gala. Can be an existing Contact OR just a typed name (added over time); tick "Add as Contact" to find-or-create the Contact and back-fill the lookup. Captures dietary restrictions, meal choice, and RSVP. Gala Event Gifts. Author: Jason Ott.</description>
    <label>Gala Guest</label>
    <nameField>
        <displayFormat>GG-{00000}</displayFormat>
        <label>Gala Guest Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gala Guests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>