force-app/main/default/objects/Gala_Guest__c/fields/Add_as_Contact__c.field-meta.xml
<CustomField>
    <fullName>Add_as_Contact__c</fullName>
    <description>Tick to promote this named guest to a Contact: automation (Phase B) finds a matching Contact or creates one, then back-fills the Contact lookup. Gala Event Gifts / Jason Ott.</description>
    <label>Add as Contact</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>