force-app/main/default/objects/Gala_Guest__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>The matched Contact for this guest, if known/created. Optional — a guest can be just a name. Gala Event Gifts / Jason Ott.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Gala Guests</relationshipLabel>
    <relationshipName>Gala_Guests</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>