force-app/main/default/objects/Gala_Guest__c/fields/Contact_Match_Needs_Review__c.field-meta.xml
<CustomField>
    <fullName>Contact_Match_Needs_Review__c</fullName>
    <description>Set by the Add-as-Contact resolver when the guest's name matched 2+ existing Contacts — a person must pick the right one manually (the lookup is left blank). Gala Event Gifts / Jason Ott.</description>
    <label>Contact Match Needs Review</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>