force-app/main/default/objects/Gala_Guest__c/fields/Dietary_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Dietary_Restrictions__c</fullName>
    <description>Guest dietary restrictions (multi-select). PLACEHOLDER value set pending the client's list (Kosher likely central for JCRC). Gala Event Gifts / Jason Ott.</description>
    <label>Dietary Restrictions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kosher</fullName>
            </value>
            <value>
                <fullName>Vegetarian</fullName>
            </value>
            <value>
                <fullName>Vegan</fullName>
            </value>
            <value>
                <fullName>Gluten-Free</fullName>
            </value>
            <value>
                <fullName>Dairy-Free</fullName>
            </value>
            <value>
                <fullName>Nut Allergy</fullName>
            </value>
            <value>
                <fullName>Shellfish Allergy</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>