force-app/main/default/objects/Gala_Guest__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>Guest first name (used when the guest is not a Contact). Gala Event Gifts / Jason Ott.</description>
    <label>First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>