force-app/main/default/objects/Gala_Guest__c/fields/Gala_Table__c.field-meta.xml
<CustomField>
    <fullName>Gala_Table__c</fullName>
    <description>The table this guest is seated at (optional — individual-ticket guests need not have a table). Gala Event Gifts / Jason Ott.</description>
    <label>Gala Table</label>
    <referenceTo>Gala_Table__c</referenceTo>
    <relationshipLabel>Gala Guests</relationshipLabel>
    <relationshipName>Gala_Guests</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>