force-app/main/default/objects/Gala_Guest__c/fields/Guest_Name__c.field-meta.xml
<CustomField>
    <fullName>Guest_Name__c</fullName>
    <description>Display name: the Contact's name when linked, otherwise the typed first/last. (Built from FirstName/LastName components — the compound Name isn't formula-accessible through a lookup.) Gala Event Gifts / Jason Ott.</description>
    <formula>IF(
  NOT(ISBLANK(Contact__c)),
  TRIM(BLANKVALUE(Contact__r.FirstName, "") &amp; " " &amp; Contact__r.LastName),
  TRIM(BLANKVALUE(First_Name__c, "") &amp; " " &amp; BLANKVALUE(Last_Name__c, ""))
)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Guest Name</label>
    <type>Text</type>
</CustomField>