force-app/main/default/objects/Gala_Guest__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Guest last name (used when the guest is not a Contact). Gala Event Gifts / Jason Ott.</description>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>