force-app/main/default/objects/Gala_Guest__c/fields/Meal_Choice__c.field-meta.xml
<CustomField>
    <fullName>Meal_Choice__c</fullName>
    <description>Entree selection for a plated dinner. PLACEHOLDER value set pending the client's menu. Gala Event Gifts / Jason Ott.</description>
    <label>Meal Choice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chicken</fullName>
            </value>
            <value>
                <fullName>Beef</fullName>
            </value>
            <value>
                <fullName>Fish</fullName>
            </value>
            <value>
                <fullName>Vegetarian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>