force-app/main/default/objects/Gala_Guest__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Free-form notes about this guest (seating requests, accessibility, etc.). Gala Event Gifts / Jason Ott.</description>
    <label>Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>