force-app/main/default/objects/Gala_Guest__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>The gala purchase this guest belongs to (stamped from the table when seated). Gala Event Gifts / Jason Ott.</description>
    <label>Purchase (Opportunity)</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Gala Guests</relationshipLabel>
    <relationshipName>Gala_Guests</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>