force-app/main/default/objects/Gala_Guest__c/fields/RSVP_Status__c.field-meta.xml
<CustomField>
    <fullName>RSVP_Status__c</fullName>
    <description>Where this guest stands: invited, confirmed, declined, attended, or no-show. Gala Event Gifts / Jason Ott.</description>
    <label>RSVP Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invited</fullName>
                <default>true</default>
                <label>Invited</label>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>